--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="bg3 (2).jpg" class="d-block w-100" alt="...">
+        <img src=""bg1.jfif" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Welcome To Indian Weeding</h2>
           <p>A traditional and Grand Indian Wedding</p>
@@ -159,7 +159,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="bg1.jfif" class="d-block w-100" alt="...">
+        <img src=bg3 (2).jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Welcome To Indian Weeding</h2>
           <p>A traditional and Grand Indian Wedding</p>
